--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 
 -->
 <head>
-	<title>Example web site</title>
+	<title>Bojan Mihajilovic web site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -23,7 +23,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Bojan Mihajilovic 2014</p>
 	</footer>
 </body>
 </html>
