trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -24,11 +24,13 @@ sdfsfsdf
 	<!-- Content Goes Here -->
 		<p>
 			Changed Content
+			
+			ddd
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Bojan Mihajilovic 2014
-		
+		<p>&copy; Bojan Mihajilovic 2014</p>
+			ddd</p>
 			sfdsfsdf</p>
 	</footer>
 </body>
