conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,9 @@
 
 	Copyright
 Before rebase conflicts
+sdfs
+
+sdfsfsdf
 
 
 -->
@@ -24,7 +27,9 @@ Before rebase conflicts
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Bojan Mihajilovic 2014</p>
+		<p>&copy; Bojan Mihajilovic 2014
+		
+			sfdsfsdf</p>
 	</footer>
 </body>
 </html>
