local: update simple html copyright

--- a/simple.html
+++ b/simple.html
@@ -29,7 +29,7 @@ sdfsfsdf
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Bojan Mihajilovic 2014</p>
+		<p>&copy; copyright something</p>
 			ddd</p>
 			sfdsfsdf</p>
 	</footer>
